[tool.poetry]
name = "finance-api"
version = "0.1.0"
description = ""
authors = ["Atromight <asimitsidellis@gmail.com>"]
readme = "README.md"
packages = [{include = "finance_api"}]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.115.12"
uvicorn = "^0.34.3"
sqlalchemy = "^2.0.41"
aiosqlite = "^0.21.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
